# miopen-benchmark

./: .gitignore  CMakeLists.txt  Makefile  layers.hpp  multi_layers.hpp  resnet.cpp  vgg19.cpp
